--- a/wendys-app/src/index.css
+++ b/wendys-app/src/index.css
@@ -1,11 +1,13 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@font-face {
+  font-family: 'Champie';
+  src: url('./assets/Fonts/ChampieTrial-Regular.ttf') format('truetype');
+}
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+:root {
+  --background: #fdf7e4;
+  --foreground: #4a3f35;
+  --pinkColorHeader: #E989A4;
+  --darkPink: #A2576C;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,23 +15,17 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+  font-family: 'Champie', system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+  color: #1a1a1a;
+  background-color: var(--background);
   min-height: 100vh;
 }
 
+/* Estilos base para elementos HTML */
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -46,9 +42,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
