Se muestran los consumibles

--- a/wendys-app/src/index.css
+++ b/wendys-app/src/index.css
@@ -11,6 +11,7 @@
   --background: #fdf7e4;
   --foreground: #4a3f35;
   --pinkColorHeader: #E989A4;
+  --lightPink: #F6CFCE;
   --lightYellow: #FFFDEA;
   --darkPink: #A2576C;
   --buttonYellow: rgb(251, 210, 117);
