--- a/wendys-app/src/components/main_content/PinkRectangle.css
+++ b/wendys-app/src/components/main_content/PinkRectangle.css
@@ -2,7 +2,7 @@
     background-color: var(--lightPink);
     border-radius: 40px;
     padding: 2em 3em;
-    width: 100%;
+    width: fit-content;
 }
 .rectangle-title {
     font-family: 'Champie',Verdana, Geneva, Tahoma, sans-serif;
