--- a/wendys-app/src/pages/gestionar_inventario/ConsumiblesGrid.css
+++ b/wendys-app/src/pages/gestionar_inventario/ConsumiblesGrid.css
@@ -5,14 +5,20 @@
   }
   
   /* Media queries para hacer el grid responsivo */
-  @media (min-width: 640px) {
+  @media (min-width: 768px) {
     .consumibles-grid {
-      grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, auto);
+        max-height: calc(3 * 8.5em); 
+        overflow-y: auto;
     }
   }
   
   @media (min-width: 1024px) {
     .consumibles-grid {
-      grid-template-columns: repeat(3, 1fr);
+      grid-template-columns: repeat(4, 1fr);
+      grid-template-rows: repeat(3, auto);
+      max-height: calc(3 * 8.5em); 
+      overflow-y: auto;
     }
   }
