--- a/wendys-app/src/components/main_content/PinkRectangle.css
+++ b/wendys-app/src/components/main_content/PinkRectangle.css
@@ -1,67 +1,67 @@
-
 .pink-rectangle {
   background-color: var(--lightPink);
   border-radius: 40px;
-  padding: 2em 3em;
-  width: 90%;
-  max-width: 100%; 
-  min-width: 300px; 
+  padding: 2em 4em; 
+  width: auto;     
+  max-width: 100%;
+  min-width: 0;      
 
-  display: inherit;
-  flex-direction: inherit;
-  align-items: inherit;
-  justify-content: inherit;
-  text-align: inherit;
-  
+  display: flex;     
+  flex-direction: column; 
+  align-items: stretch; 
+
+  text-align: left;   
+
   box-shadow: 0 4px 12px rgba(0,0,0,0.1);
 }
 label{
-    color: var(--darkPink);
-    font-size: 2em;
+  color: var(--darkPink);
+  font-size: 2em;
 }
 .rectangle-title {
-    font-family: 'Champie',Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 2em;
-    font-weight: 600;
-    color: var(--darkPink);
-    margin-bottom: 0.5em;
-  }
-  .search-container {
-    margin-bottom: 1em;
-    display: flex;
-    justify-content: center;
-  }
-  
-  .search-input {
-    width: 90%;
-    height: 1.5em;
-    padding: 0.2em 1em;
-    border-radius: 30px;
-    background-color: var(--darkPink);
-    color: var(--lightPink);
-    font-family: 'AmiriQuran','Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    border: none;
-    font-size: large;
-  }
-  
-  .search-input::placeholder {
-    color: var(--lightPink);
-    font-family: 'Champie','Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 1.5em;
-  }
-  
-  .search-input:focus {
-    outline: none;
-    box-shadow: 0 0 0 2px var(--lightYellow);
-  }
-  
-  .content-container {
-    overflow-y: auto;
-    max-height: 70vh;
-    padding-right: 8px; 
-  }
-  
-  .content-container::-webkit-scrollbar {
-    width: 8px;
-    color: var(--darkPink);
-  }
+  font-family: 'Champie',Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 2em;
+  font-weight: 600;
+  color: var(--darkPink);
+  margin-bottom: 0.5em;
+  text-align: center; /* Centra el título dentro del rectángulo */
+}
+.search-container {
+  margin-bottom: 1em;
+  display: flex;
+  justify-content: center;
+}
+
+.search-input {
+  width: 90%;
+  height: 1.5em;
+  padding: 0.2em 1em;
+  border-radius: 30px;
+  background-color: var(--darkPink);
+  color: var(--lightPink);
+  font-family: 'AmiriQuran','Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  border: none;
+  font-size: large;
+}
+
+.search-input::placeholder {
+  color: var(--lightPink);
+  font-family: 'Champie','Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 1.5em;
+}
+
+.search-input:focus {
+  outline: none;
+  box-shadow: 0 0 0 2px var(--lightYellow);
+}
+
+.content-container {
+  overflow-y: auto;
+  max-height: 70vh;
+  padding-right: 8px;
+}
+
+.content-container::-webkit-scrollbar {
+  width: 8px;
+  color: var(--darkPink);
+}
