--- a/wendys-app/src/components/nav_left/NavLeft.css
+++ b/wendys-app/src/components/nav_left/NavLeft.css
@@ -1,13 +1,16 @@
 .nav-left{
+    display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
     
 }
 
 .nav-buttons{
     display: inline-flex;
     flex-direction: column;
-    
+    font-size: larger;
     gap: 0.6em;
 }
 .nav-button{
@@ -21,11 +24,18 @@
 .nav-instruction p{
     color: var(--darkPink);
     font-family: 'AmiriQuran';
-    width: 12em;
+    font-size: 1.5em;
+    width: 10em;
 }
 
-.nav-left{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+
+@media screen and (max-width: 1024px) and (max-height: 768px) {
+    .nav-instruction p {
+      font-size: 1.3em;
+      width: 12em;
+    }
+    .nav-buttons {
+      font-size: 1.2em;
+
+  }
 }
