--- a/wendys-app/src/pages/gestionar_producto/GestionarProducto.css
+++ b/wendys-app/src/pages/gestionar_producto/GestionarProducto.css
@@ -1,4 +1,16 @@
 .productos-container{
     display: flex;
     flex-direction: row;
+    gap: 10%;   
+}
+.productos-content{
+    display: flex;
+    justify-content: center;
+
+}
+.productos-content-div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
