--- a/wendys-app/src/components/main_content/PinkRectangle.css
+++ b/wendys-app/src/components/main_content/PinkRectangle.css
@@ -1,8 +1,7 @@
 .pink-rectangle {
   background-color: var(--lightPink);
   border-radius: 40px;
-  padding: 2em 4em; 
-  width: auto;     
+  padding: 2em 4em;    
   max-width: 100%;
   min-width: 0;      
 
@@ -55,8 +54,25 @@ label{
   box-shadow: 0 0 0 2px var(--lightYellow);
 }
 
-
+.content-container{
+  display: flex;
+  justify-content: center;
+}
 .content-container::-webkit-scrollbar {
   width: 8px;
   color: var(--darkPink);
+}
+
+@media (min-width: 1025px)  {
+  .pink-rectangle {
+    width: 90%;    
+  
+    display: flex;     
+    flex-direction: column; 
+    align-items: center; 
+  
+  
+  }
+  
+
 }
