Registrarventa-detallesProducto terminado

--- a/wendys-app/src/index.css
+++ b/wendys-app/src/index.css
@@ -14,6 +14,7 @@
   --lightPink: #F6CFCE;
   --lightYellow: #FFFDEA;
   --darkPink: #A2576C;
+  --buttonSelectedPink: #E989A4;
   --buttonYellow: rgb(251, 210, 117);
 
   padding: 2em 1em;
