--- a/wendys-app/src/index.css
+++ b/wendys-app/src/index.css
@@ -17,21 +17,18 @@
   --buttonSelectedPink: #E989A4;
   --buttonYellow: rgb(251, 210, 117);
 
-  padding: 2em 1em;
 
   font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
 } 
 
 body {
-  margin: 0;
+  margin: 0.5em;
   font-family: 'Champie', system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   color: #1a1a1a;
   background-color: var(--background);
-  min-height: 100%;
+  height: 100%;
 }
 
 /* Estilos base para elementos HTML */
@@ -39,23 +36,47 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+html{
+  width: auto;
+  height: fit-content;
+  padding: 2em 1em;
 }
 
+.container{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 2em;
+}
+.content{
+  display: flex;
+  justify-content: center;
 
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+}
+.fit-parent{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 70%;
+}
+
+button {
+  border: 0px solid transparent;
+  padding: 0.7em 1.2em;
+  font-size: 1em;
+  font-family: inherit;
+  cursor: pointer;
+  background-color: var(--buttonYellow);
+  font-family: 'Champie';
+  color: var(--lightYellow);
+  border-radius: 50px;
+}
+
+@media (max-width: 820px) {
+  .content {
+    flex-direction: column;
+  }
+
 }
 
 @media (prefers-color-scheme: light) {
