--- a/wendys-app/src/pages/registrar_venta/ProductoDetalles.css
+++ b/wendys-app/src/pages/registrar_venta/ProductoDetalles.css
@@ -33,3 +33,45 @@
     flex-direction: row;
     gap: 1.5em;
 }
+
+.costo-producto{
+    display: flex;
+    flex-direction: column;
+    color: var(--darkPink);
+    width: fit-content;
+    height: fit-content;
+    align-items: start;
+    justify-content: center;
+    font-family: 'AmiriQuran','Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: x-large;
+    gap: 0.3em;
+
+}
+.divider {
+    border: 0.01em solid var(--darkPink);
+    width: 100%;
+    margin: 0;
+  }
+.costo-producto h4{
+    margin: 0px;
+    font-size: 1em;
+}
+
+.costo-producto p{
+    margin: 0px;
+    margin-left: 0.2em;
+}
+
+.left-container{
+    display: flex;
+    flex-direction: column;
+    gap: 3em;
+    align-items: start;
+}
+
+@media (max-width: 1000px) {
+    .content-detalles{
+      flex-direction: column;
+    }
+  
+  }
