--- a/wendys-app/src/components/main_content/productos-grid/ProductoButton.css
+++ b/wendys-app/src/components/main_content/productos-grid/ProductoButton.css
@@ -17,9 +17,10 @@
 }
 
 button img{
-    height: 100%;
+    height: auto;
     width: auto;
-
+    max-height: 100%;
+    max-width: 100%;
 }
 
 .producto-button-container p{
