--- a/wendys-app/src/components/main_content/PinkRectangle.css
+++ b/wendys-app/src/components/main_content/PinkRectangle.css
@@ -63,6 +63,14 @@ label{
   color: var(--darkPink);
 }
 
+.image-container img {
+  width: 80px;
+  height: auto;
+  max-width: 100%;
+  border-radius: 8px;
+}
+
+
 @media (min-width: 1025px)  {
   .pink-rectangle {
     width: 90%;    
