--- a/wendys-app/src/components/header/Header.css
+++ b/wendys-app/src/components/header/Header.css
@@ -1,85 +1,86 @@
-
 header {
-    position: sticky;
-    gap: 2em;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    box-sizing: border-box;
-    background-color: var(--background);
+  position: sticky;
+  padding: 2em;
+  gap: 2em;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-sizing: border-box;
+  background-color: var(--background);
+}
+
+.header-logo {
+  height: 7em;
+  width: auto;
+  margin-left: 3em;
+}
+
+.header-nav ul {
+  display: flex;
+  gap: 1.7em;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  align-items: center;
+}
+
+.header-nav li {
+  margin: 0;
+}
+
+.header-nav a {
+  color: var(--pinkColorHeader);
+  text-decoration: none;
+  font-size: 1.7em;
+  transition: color 0.3s ease-in-out;
+  padding: 0.5em 0;
+  position: relative;
+}
+
+.header-nav a:hover {
+  color: var(--darkPink);
+}
+
+.header-nav a.active {
+  color: var(--darkPink);
+  font-weight: bold;
+}
+
+@media screen and (max-width: 1024px) and (max-height: 768px) {
+  .header-nav a {
+    font-size: 1.3em;
   }
-  
+
   .header-logo {
-    height: 7em;
+    height: 5em;
     width: auto;
     margin-left: 3em;
   }
-  
-  .header-nav ul {
-    display: flex;
-    gap: 1.7em;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    align-items: center;
-  }
-  
-  .header-nav li {
-    margin: 0;
-  }
-  
-  .header-nav a {
-    color: var(--pinkColorHeader);
-    text-decoration: none;
-    font-size: 1.7em;
-    transition: color 0.3s ease-in-out;
-    padding: 0.5em 0;
-    position: relative;
-  }
-  
-  .header-nav a:hover {
-    color: var(--darkPink);
-  }
-  
-  .header-nav a.active {
-    color: var(--darkPink);
-    font-weight: bold;
+
+}
+
+
+@media (max-width: 769px) {
+  .header {
+    flex-direction: column;
+    padding: 1rem;
   }
 
-  @media screen and (max-width: 1024px) and (max-height: 768px) {
-    .header-nav a {
-      font-size: 1.3em;
-    }
-    .header-logo {
-      height: 5em;
-      width: auto;
-      margin-left: 3em;
-    }
 
+  .header-nav-list {
+    flex-direction: row;
+    width: 100%;
+    gap: 0.5rem;
   }
 
-  
-  @media (max-width: 769px) {
-    .header {
-      flex-direction: column;
-      padding: 1rem;
-    }
-
-    
-    .header-nav-list {
-      flex-direction: row;
-      width: 100%;
-      gap: 0.5rem;
-    }
-    
-    .nav-item {
-      width: 100%;
-    }
-    
-    .nav-link {
-      display: block;
-      width: 100%;
-      text-align: center;
-    }
+  .nav-item {
+    width: 100%;
   }
+
+  .nav-link {
+    display: block;
+    width: 100%;
+    text-align: center;
+  }
+}
