--- a/wendys-app/src/index.css
+++ b/wendys-app/src/index.css
@@ -2,6 +2,7 @@
   font-family: 'Champie';
   src: url('./assets/Fonts/ChampieTrial-Regular.ttf') format('truetype');
 }
+
 @font-face {
   font-family: 'AmiriQuran';
   src: url('./assets/Fonts/AmiriQuran-Regular.ttf') format('truetype');
@@ -20,40 +21,46 @@
 
   font-synthesis: none;
 
-} 
+}
 
 body {
-  margin: 0.5em;
+  margin: 0;
+  overflow: hidden;
+  padding: 0;
   font-family: 'Champie', system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   color: #1a1a1a;
   background-color: var(--background);
-  height: 100%;
+  height: 100vh;
 }
 
 /* Estilos base para elementos HTML */
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-html{
-  width: auto;
-  height: fit-content;
-  padding: 2em 1em;
+
+
+html {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
 }
 
-.container{
+
+
+.container {
   display: flex;
   flex-direction: row;
   justify-content: center;
   margin-top: 2em;
 }
-.content{
+
+.content {
   display: flex;
   justify-content: center;
 
 }
-.fit-parent{
+
+.fit-parent {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -79,9 +86,11 @@ button {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
