Falta la integración

--- a/wendys-app/src/index.css
+++ b/wendys-app/src/index.css
@@ -16,7 +16,7 @@
   --lightYellow: #FFFDEA;
   --darkPink: #A2576C;
   --buttonSelectedPink: #E989A4;
-  --buttonYellow: rgb(251, 210, 117);
+  --buttonYellow: #fbd275;
 
 
   font-synthesis: none;
